--- a/blogpost.html
+++ b/blogpost.html
@@ -4,8 +4,13 @@
                     <link rel="stylesheet" href="css/estilos.css" />
           </head>
           <body>
-                    <h1>Aqui vamos a hacer un blog post</h1>
+                    <div id ="container">
+                              <div id= "post">
+                    <h1>Este es el título atractivo
+                              del interante post </h1>
                     <p>Y este es un parrafo de inicio
+                    donde vamos a explicar las cosas
+                    interantes 
                     </p>
                     
           </body>
